Fixed Pricing calculations and add Bulks Jobs Page

--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -10,6 +10,9 @@
     <a href="{{ url_for('add_job') }}" class="btn btn-success btn-lg me-2">
       <i class="bi bi-plus-circle me-1"></i>Create Job
     </a>
+    <a href="{{ url_for('add_bulk_jobs') }}" class="btn btn-primary btn-lg">
+      <i class="bi bi-list-ul me-1"></i>Create Bulk Jobs
+    </a>
   </div>
 </div>
 <div class="card shadow-sm mb-4">
